test/fail/enums_and_variants/inherit_enum.lily
#[
SyntaxError: 'Option' cannot be inherited from.
    from inherit_enum.lily:6:
]#

class abc < Option {
}
